ask api/v1/strategies

--- a/frontend/src/content/docs/api/v1.md
+++ b/frontend/src/content/docs/api/v1.md
@@ -18,7 +18,7 @@ https://your-domain.com/api/v1
 Send a Bearer token in the `Authorization` header unless stated otherwise.
 
 ```bash
-curl -H "Authorization: Bearer <token>" https://your-domain.com/api/v1/feeds
+curl -H "Authorization: Bearer <token>" https://your-domain.com/api/v1/strategies
 ```
 
 ## Response Envelope
@@ -37,10 +37,6 @@ Every JSON response returns `success`, `data`, and `meta` keys. Errors replace `
 ```
 
 ## Feeds
-
-### GET /feeds
-
-Returns the feeds the current token can access.
 
 ### POST /feeds
 
